Update to new amzDUDES logo and redesign login screen
- Replace logo with new amzDUDES branding (growth, commitment, gratitude)
- Update login page to display full logo prominently
- Update sidebar to show amzDUDES logo without text
- Update page title and meta tags
- Update favicon to match new branding

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AMZDUDES</title>
-    <meta name="description" content="AMZDUDES Generated Project">
+    <title>amzDUDES - Growth, Commitment, Gratitude</title>
+    <meta name="description" content="amzDUDES - Amazon Agency Management Platform">
     <meta name="author" content="Lovable" />
     
     <meta property="og:type" content="website" />
