AGGRESSIVE CACHE FIX: Disable all caching, add version bumps, force fresh deployment

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>amzDUDES - Growth, Commitment, Gratitude</title>
     <meta name="description" content="amzDUDES - Amazon Agency Management Platform">
     <meta name="author" content="Lovable" />
@@ -17,7 +20,7 @@
     <meta name="twitter:title" content="AMZDUDES">
     <meta property="og:description" content="AMZDUDES Generated Project">
     <meta name="twitter:description" content="AMZDUDES Generated Project">
-    <link rel="icon" type="image/png" href="/favicon.png?v=7">
+    <link rel="icon" type="image/png" href="/favicon.png?v=8">
   </head>
 
   <body>
